. [firefox][safari]fix apply button cannot align

--- a/src/main/webapp/less/CustomFilterDate.less
+++ b/src/main/webapp/less/CustomFilterDate.less
@@ -67,7 +67,7 @@
 		}
 		.btnApplyValue{
 			float:right;
-			margin: 48px 14px 0 20px;
+			margin: 48px 14px 0 14px;
 			background: #00a4a8;
 			color:#fff;
 			border-radius:4px;
